# retail-ai

./: compose.yaml  index.ipynb  wsgi.py
backend/: Dockerfile.dev  feed_data.py  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  settings.py
