[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Muzammil <muzamilbhundi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
python-multipart = "^0.0.9"
pydantic = "^2.6.4"
fastapi = {extras = ["uvicorn"], version = "^0.115.0"}
google = "^3.0.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
